--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.android.justjava.MainActivity">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,7 +28,7 @@
                 android:layout_marginBottom="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
-                android:text="Topping"
+                android:text="@string/topping"
                 android:textAllCaps="true" />
 
             <CheckBox
@@ -96,15 +94,6 @@
             </LinearLayout>
 
             <TextView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:text="Order Summary"
-                android:textAllCaps="true" />
-
-            <TextView
                 android:id="@+id/order_summary_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -121,5 +110,5 @@
                 android:onClick="submitOrder"
                 android:text="ORDER" />
         </LinearLayout>
-    </ScrollView>
+
 </android.support.constraint.ConstraintLayout>
