--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
             android:orientation="vertical">
 
             <EditText
-                android:hint="@string/namehint"
+                android:hint="@string/nameHint"
                 android:inputType="textCapWords"
                 android:id="@+id/edit_text_name"
                 android:layout_width="match_parent"
@@ -32,7 +32,7 @@
                 android:textAllCaps="true" />
 
             <CheckBox
-                android:id="@+id/whiped_cream"
+                android:id="@+id/whipped_cream_checkbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
